import React from 'react'
import renderer from 'react-test-renderer'
// import NextButton from '../next_button'

describe('<NextButton />', () => {
//   const label = 'button label';

  // test('it renders correctly as enabled', () => {
  //   const tree = renderer.create(<NextButton disabled={false} label={label} />).toJSON();
  //   expect(tree).toMatchSnapshot();
  // });

  // test('it renders correctly as disabled', () => {
  //   const tree = renderer.create(<NextButton disabled={true} label={label} />).toJSON();
  //   expect(tree).toMatchSnapshot();
  // });

  test('test placeholder', () => {
    expect(true).toBe(true)
  })
});
